--- a/views/notas.html
+++ b/views/notas.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="../styles/notas.css" />
   </head>
   <body>
+    <div>
+      <nav class="navbar">
+        <a href="../index.html" class="logo">
+          <img src="../images/LOGO_COP-removebg-preview.png" alt="Logo" />
+        </a>
+        <ul class="main-nav">
+          <li><a href="./formAlta.html" class="nav-links">Alta</a></li>
+          <li><a href="./obrasGeneral.html" class="nav-links">Obras</a></li>
+          <li><a href="./panel.html" class="nav-links">Personal</a></li>
+          <li><a href="./perfil.html" class="nav-links">Perfil</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="supporting">
       <div class="wrapper">
         <h3>Envía una nota</h3>
         <p></p>
         <form>
-          <input type="text" name="firstName" placeholder="De:" /><br />
+          <input type="text" name="firstName" value="Roberto Castañeda" /><br />
           <input type="text" name="lastName" placeholder="Para" /><br />
           <textarea placeholder="Escribir Nota" rows="5" cols="36"></textarea
           ><br />
