--- a/views/panel.html
+++ b/views/panel.html
@@ -70,7 +70,7 @@
       .main-nav {
         list-style-type: none;
         margin: 0;
-        padding: 90rem;
+        padding-left: 86rem;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -177,7 +177,8 @@
         <img src="../images/LOGO_COP-removebg-preview.png" alt="Logo" />
       </a>
       <ul class="main-nav">
-        <li><a href="./obras.html" class="nav-links">Obras</a></li>
+        <li><a href="./formAlta.html" class="nav-links">Alta</a></li>
+        <li><a href="./obrasGeneral.html" class="nav-links">Obras</a></li>
         <li><a href="./notas.html" class="nav-links">Notas</a></li>
         <li><a href="./perfil.html" class="nav-links">Perfil</a></li>
       </ul>
