--- a/views/perfil.html
+++ b/views/perfil.html
@@ -12,7 +12,8 @@
         <img src="../images/LOGO_COP-removebg-preview.png" alt="Logo" />
       </a>
       <ul class="main-nav">
-        <li><a href="./obras.html" class="nav-links">Obras</a></li>
+        <li><a href="./formAlta.html" class="nav-links">Alta</a></li>
+        <li><a href="./obrasGeneral.html" class="nav-links">Obras</a></li>
         <li><a href="./notas.html" class="nav-links">Notas</a></li>
         <li><a href="./panel.html" class="nav-links">Personal</a></li>
       </ul>
