--- a/styles/perfil.css
+++ b/styles/perfil.css
@@ -99,7 +99,6 @@ img{
     min-height: 100vh;
     background: linear-gradient(#588dc2, #0f245f);
   }
-
   .navbar {
     font-size: 18px;
     background-image: linear-gradient(260deg, #0f245f 0%, #ffffff 100%);
@@ -110,7 +109,7 @@ img{
   .main-nav {
     list-style-type: none;
     margin: 0;
-    padding: 90rem;
+    padding-left: 86rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -157,6 +156,7 @@ img{
       top: 0;
       left: 0;
       width: 100%;
+      height: 82px;
       display: flex;
       align-items: center;
     }
@@ -192,59 +192,6 @@ img{
     .nav-links:hover {
       color: rgba(255, 255, 255, 1);
     }
-  }
-
-  img {
-    padding-top: 10px;
-    height: 100px;
-    width: 100px;
-  }
-  body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh; /* Ajustado para que ocupe toda la pantalla */
-    background: linear-gradient(#588dc2, #0f245f);
-  }
-
-  .navbar {
-    font-size: 18px;
-    background-image: linear-gradient(260deg, #0f245f 0%, #ffffff 100%);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-  }
-
-  .main-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-  }
-
-  .main-nav li {
-    margin: 0 10px;
-  }
-
-  .nav-links {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
-  }
-
-  .logo {
-    display: inline-block;
-    font-size: 22px;
-    margin-top: 10px;
-    margin-left: 20px;
   }
 
   img {
